# Clover

./: CMakeLists.txt  README.md  grammar.md
include/: ast.h  codegen.h  lex.h  parse.h  sem.h  tok.h
src/: lex.cpp  main.cpp
src/check/: analyzer.cpp  declaration_pass.cpp
src/codegen/: codegen.cpp  passes.h
src/codegen/passes/: dcepass.cpp
src/parser/: parse.cpp  parse_block.cpp  parse_expression.cpp  parse_extern.cpp  parse_function.cpp  parse_program.cpp  parse_statement.cpp  parse_struct.cpp  parse_type.cpp
test/: test.clv
